--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -96,10 +96,3 @@ html, body {
 .w-60 {
   width: 60%;
 }
-
-@-webkit-keyframes autofill {
-  to {
-    color: $white;
-    background: transparent;
-  }
-}
